show other classes

--- a/guitar_classifier_webapp.ipynb
+++ b/guitar_classifier_webapp.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# <div align=\"center\">*Acoustic Guitar Classifier*</div>"
+    "# <div align=\"center\">Acoustic Guitar Classifier</div>"
    ]
   },
   {
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,7 +118,11 @@
     "    # Run the classifier on the image\n",
     "    pred,pred_idx,probs = learn_inf.predict(img)\n",
     "    # Print out the classification results\n",
-    "    lbl_pred.value = f'Prediction: {(pred + lbl_ext).title()}; Probability: {probs[pred_idx]:.04f}'"
+    "    lbl_pred.value = f'Prediction: {(pred + lbl_ext).title()}; Probability: {probs[pred_idx]:.06f}'\n",
+    "    # Reset other labels when making a new prediction\n",
+    "    lbl_pred_a.value = ''\n",
+    "    lbl_pred_b.value = ''\n",
+    "    lbl_pred_c.value = ''"
    ]
   },
   {
@@ -143,12 +147,17 @@
     "    img = PILImage.create(btn_upload.data[-1])\n",
     "    # Run the classifier on the image\n",
     "    pred,pred_idx,probs = learn_inf.predict(img)\n",
-    "    # Zip class names and probabilities, convert into a dataframe and sort by descending probability\n",
-    "    res = pd.DataFrame(zip(learn_inf.dls.vocab, probs.numpy())).sort_values(by=1, ascending=False)\n",
+    "    # Get predicted probabilities for the remaining classes\n",
+    "    probs = probs[probs!=probs[pred_idx]]\n",
+    "    # Get names for remaining classes\n",
+    "    voc = list(learn_inf.dls.vocab)\n",
+    "    voc.remove(pred)\n",
+    "    # Sort probabilities and corresponding vocab indices\n",
+    "    res = sorted([(v,i) for i,v in enumerate(probs)], reverse=True)\n",
     "    # Print out the predicted probabilities for the three remaining classes\n",
-    "    lbl_pred_a.value = f'{(res.iloc[1,0] + lbl_ext).title()}: {res.iloc[1,1]:.06f}'\n",
-    "    lbl_pred_b.value = f'{(res.iloc[2,0] + lbl_ext).title()}: {res.iloc[2,1]:.06f}'\n",
-    "    lbl_pred_c.value = f'{(res.iloc[3,0] + lbl_ext).title()}: {res.iloc[3,1]:.06f}'"
+    "    lbl_pred_a.value = f'{(voc[res[0][1]] + lbl_ext).title()}: {res[0][0]:.06f}'\n",
+    "    lbl_pred_b.value = f'{(voc[res[1][1]] + lbl_ext).title()}: {res[1][0]:.06f}'\n",
+    "    lbl_pred_c.value = f'{(voc[res[2][1]] + lbl_ext).title()}: {res[2][0]:.06f}'"
    ]
   },
   {
@@ -169,7 +178,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "76e2aff585094290bd9b701080e085be",
+       "model_id": "0a992140ec6f40848a8cf064d2403972",
        "version_major": 2,
        "version_minor": 0
       },
@@ -207,6 +216,13 @@
     "      btn_upload, btn_run, out_pl, lbl_pred, btn_show, lbl_pred_a, lbl_pred_b, lbl_pred_c], \n",
     "      layout=Layout(align_items='center'))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
