--- a/guitar_classifier_webapp.ipynb
+++ b/guitar_classifier_webapp.ipynb
@@ -11,14 +11,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<div align=\"center\">Want to know which kind of acoustic guitar you have? This machine learning classifier can detect dreadnought, jumbo, classical and resonator guitars with 87% accuracy. If you `upload a clear and complete picture` of your guitar, you increase the chance that the classifier will get it right.</div>"
+    "<div align=\"center\">Want to know which kind of acoustic guitar you have? If you're not a guitar enthusiast or a beginner, it can be tricky to distinguish between the many guitar types. I have build this simple app prototype which is powered by machine learning to automatically classify images of four types of acoustic guitars. The underlying model can detect two types of western guitars, i.e. the common dreadnought and the larger jumbo, classical guitars and a very specific guitar type called resonator guitar. If you upload a clear and complete picture of your guitar, you increase the chance that the classifier will get it right.</div>"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<div align=\"center\">Simply try it out :-)</div>"
+    "<div align=\"center\">Simply try it out yourself :-) </div>"
    ]
   },
   {
@@ -29,7 +29,7 @@
    "source": [
     "# To turn your notebook into a webapp, install voila which will only show markdown and outputs and hide the rest\n",
     "\n",
-    "# Install voila library and application\n",
+    "# Install voila library \n",
     "#!pip install voila\n",
     "\n",
     "# Connect voila to this notebook\n",
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,13 +79,13 @@
     "btn_upload = widgets.FileUpload()\n",
     "# A button to run the classification\n",
     "btn_run = widgets.Button(description='Classify image')\n",
-    "# Another button to show all predictions\n",
+    "# Another button to show the other predictions\n",
     "btn_show = widgets.Button(description='Show others')\n",
     "# We want to show the uploaded image as an output\n",
     "out_pl = widgets.Output()\n",
     "# And finally we need to display the prediction as a label\n",
     "lbl_pred = widgets.Label()\n",
-    "# Add more labels for other predictions\n",
+    "# Add more labels for the other predictions\n",
     "lbl_pred_a = widgets.Label()\n",
     "lbl_pred_b = widgets.Label()\n",
     "lbl_pred_c = widgets.Label()"
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,17 +103,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Since the run button doesn't do anything, we need to define an event handler \n",
+    "# Since the run button doesn't do anything by itself, we need to define an event handler \n",
     "def on_click_classify(change):\n",
     "    # Turn the uploaded image into a PIL image file\n",
     "    img = PILImage.create(btn_upload.data[-1])\n",
     "    # Clear all previous outputs\n",
     "    out_pl.clear_output()\n",
-    "    # Display the uploaded image\n",
+    "    # Display the uploaded image with 224x224 pixels\n",
     "    with out_pl: display(img.to_thumb(224,224))\n",
     "    # Run the classifier on the image\n",
     "    pred,pred_idx,probs = learn_inf.predict(img)\n",
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -137,24 +137,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Define an event handler for the \n",
+    "# Define an event handler for the show others button\n",
     "def on_click_show_others(change):\n",
     "    # Turn the uploaded image into a PIL image file\n",
     "    img = PILImage.create(btn_upload.data[-1])\n",
     "    # Run the classifier on the image\n",
     "    pred,pred_idx,probs = learn_inf.predict(img)\n",
-    "    # Get predicted probabilities for the remaining classes\n",
+    "    # Get predicted probabilities for the other classes\n",
     "    probs = probs[probs!=probs[pred_idx]]\n",
-    "    # Get names for remaining classes\n",
+    "    # Get names for the other classes\n",
     "    voc = list(learn_inf.dls.vocab)\n",
     "    voc.remove(pred)\n",
     "    # Sort probabilities and corresponding vocab indices\n",
     "    res = sorted([(v,i) for i,v in enumerate(probs)], reverse=True)\n",
-    "    # Print out the predicted probabilities for the three remaining classes\n",
+    "    # Print out the predicted probabilities for the three other classes\n",
     "    lbl_pred_a.value = f'{(voc[res[0][1]] + lbl_ext).title()}: {res[0][0]:.06f}'\n",
     "    lbl_pred_b.value = f'{(voc[res[1][1]] + lbl_ext).title()}: {res[1][0]:.06f}'\n",
     "    lbl_pred_c.value = f'{(voc[res[2][1]] + lbl_ext).title()}: {res[2][0]:.06f}'"
@@ -162,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -172,38 +172,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0a992140ec6f40848a8cf064d2403972",
+       "model_id": "a26367eb379c47d984c2bbf56cea136c",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
        "VBox(children=(Label(value='Upload a picture of your guitar!'), FileUpload(value={}, description='Upload'), Bu…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
       ]
      },
      "metadata": {},
@@ -218,11 +198,15 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "For examples click here:\n",
+    "- [Dreadnought guitar](https://www.bing.com/images/search?q=dreadnought+guitar&scope=images&form=QBLH&sp=-1&pq=dreadnought+guitar&sc=6-18&qs=n&sk=&cvid=361D728C992E4FDA98D42C0202504A4C)\n",
+    "- [Jumbo guitar](https://www.bing.com/images/search?q=jumbo%20guitar&qs=n&form=QBIR&scope=images&sp=-1&pq=jumbo%20guitar&sc=8-12&sk=&cvid=B56651D5293C4DE0B54CD4DF290E8906)\n",
+    "- [Classical guitar](https://www.bing.com/images/search?q=classical%20guitar&qs=n&form=QBIR&scope=images&sp=-1&pq=classical%20guitar&sc=8-16&sk=&cvid=2A870A59F623457986FFB86383DB3A08)\n",
+    "- [Resonator guitar](https://www.bing.com/images/search?q=resonator%20guitar&qs=n&form=QBIR&scope=images&sp=-1&pq=resonato%20guitar&sc=8-15&sk=&cvid=0E2335DE50574F0F92BDFE8671087845)"
+   ]
   }
  ],
  "metadata": {
