--- a/guitar_classifier_webapp.ipynb
+++ b/guitar_classifier_webapp.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<div align=\"center\">Want to know which kind of acoustic guitar you have? If you're not a guitar enthusiast or a beginner, it can be tricky to distinguish between the many guitar types. I have build this simple app prototype which is powered by machine learning to automatically classify images of four types of acoustic guitars. The underlying model can detect two types of western guitars, i.e. the common dreadnought and the larger jumbo, classical guitars and a very specific guitar type called resonator guitar. If you upload a clear and complete picture of your guitar, you increase the chance that the classifier will get it right.</div>"
+    "<div align=\"center\">Want to know which kind of acoustic guitar you have? If you're not a guitar enthusiast, it can be tricky to distinguish between all the different types. I have built this simple app prototype which is powered by machine learning to automatically classify images of four types of acoustic guitars. The underlying model can detect two types of western guitars, i.e. the common dreadnought and the larger jumbo, classical guitars and a very specific guitar type called resonator guitar. If you upload a clear and complete picture of your guitar, you increase the chance that the classifier will get it right.</div>"
    ]
   },
   {
@@ -27,7 +27,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# To turn your notebook into a webapp, install voila which will only show markdown and outputs and hide the rest\n",
+    "# To turn your notebook into a webapp, install voila which will only show markdown and outputs and hide everything else\n",
     "\n",
     "# Install voila library \n",
     "#!pip install voila\n",
