links added to notebook

--- a/guitar_classifier_model.ipynb
+++ b/guitar_classifier_model.ipynb
@@ -1772,7 +1772,7 @@
     "- You need to save your notebook, trained model, requirements file and fastai utils file in a [Github](https://github.com/) repository\n",
     "- Deploy your web app for free with [Binder](https://mybinder.org/) by entering your github repository, select URL to open and enter the filename of the notebook that contains the app in the following format: /voila/render/notebook_name.ipynb\n",
     "\n",
-    "**Feel free to check out my final web app [here](), the corresponding github repo [here](https://github.com/stefan-jo/guitar_classifier) and the notebook for creating the app [here](https://github.com/stefan-jo/guitar_classifier/blob/master/guitar_classifier_webapp.ipynb)**\n",
+    "**Feel free to check out my final web app [here](https://mybinder.org/v2/gh/stefan-jo/guitar_classifier/master?urlpath=%2Fvoila%2Frender%2Fguitar_classifier_webapp.ipynb), the corresponding github repo [here](https://github.com/stefan-jo/guitar_classifier) and the notebook for creating the app [here](https://github.com/stefan-jo/guitar_classifier/blob/master/guitar_classifier_webapp.ipynb)**\n",
     "\n",
     "Thanks for reading :-)"
    ]
